# AISafetyUncertaintyCensus

./: .gitignore  Makefile  PAPER_REVIEW.md  PAPER_REVIEW_2.md  PAPER_REVIEW_3.md  README.md  potential-journals.md  pyproject.toml
.github/workflows/: ci.yml
data/derived/: CHECKSUMS.sha256  audited.csv  corpus_reporting_levels.csv  coverage_sim.csv  icc_sweep.csv  source_reporting.csv  uplift_readings.csv  verdict_grid.csv
data/raw/: census_full.md  census_records.csv  evals.csv
data/raw/sources/: CONSTRUCTION.md  MANIFEST.md
data/verification/: cell_audit.csv  human_adjudication.csv  human_signoff.csv  human_validation.csv  model_audit_adjudication.csv  model_audit_validation.csv  source_provenance.csv
docs/: HUMAN_VALIDATION_PROTOCOL.md  REPRODUCIBILITY.md  RIGHT_OF_REPLY.md  SUBMISSION_CHECKLIST.md
docs/outreach/: developer_review_template.md
paper/: main.tex  references.bib
paper/tables/: audit.tex  audit_sensitivity.tex  census.tex  census_counts.tex  census_sensitivity.tex  reporting_levels.tex  uplift.tex
scripts/: check_human_validation.py  check_paper_numbers.py  coverage_sim.py  make_figure.py  make_tables.py  make_uplift_figure.py  run_audit.py  seed_cell_audit.py  seed_human_validation.py  summarize_corpus.py  uplift_analysis.py  verify_sources.py
src/evalaudit/: __init__.py  audit.py  bayes.py  clustered.py  intervals.py  power.py  ratio.py  uplift.py
tests/: test_evalaudit.py
